Transformada S-transform (int)

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:30.075969Z",
-     "start_time": "2023-11-02T13:18:30.012051Z"
+     "end_time": "2023-11-03T10:57:02.583638Z",
+     "start_time": "2023-11-03T10:57:02.511554Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:30.099960Z",
-     "start_time": "2023-11-02T13:18:30.068707Z"
+     "end_time": "2023-11-03T10:57:02.590963Z",
+     "start_time": "2023-11-03T10:57:02.587053Z"
     }
    },
    "outputs": [],
@@ -44,8 +44,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:32.323116Z",
-     "start_time": "2023-11-02T13:18:30.074422Z"
+     "end_time": "2023-11-03T10:57:04.879487Z",
+     "start_time": "2023-11-03T10:57:02.632728Z"
     }
    },
    "outputs": [
@@ -69,8 +69,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:32.329179Z",
-     "start_time": "2023-11-02T13:18:32.323642Z"
+     "end_time": "2023-11-03T10:57:04.881939Z",
+     "start_time": "2023-11-03T10:57:04.878840Z"
     }
    },
    "outputs": [],
@@ -87,8 +87,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:45.998488Z",
-     "start_time": "2023-11-02T13:18:32.334467Z"
+     "end_time": "2023-11-03T10:57:18.315562Z",
+     "start_time": "2023-11-03T10:57:04.894933Z"
     }
    },
    "outputs": [
@@ -121,8 +121,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:47.935568Z",
-     "start_time": "2023-11-02T13:18:46.008643Z"
+     "end_time": "2023-11-03T10:57:20.275295Z",
+     "start_time": "2023-11-03T10:57:18.332800Z"
     }
    },
    "outputs": [],
@@ -138,8 +138,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:50.322472Z",
-     "start_time": "2023-11-02T13:18:47.942291Z"
+     "end_time": "2023-11-03T10:57:22.632729Z",
+     "start_time": "2023-11-03T10:57:20.281369Z"
     }
    },
    "outputs": [
@@ -164,8 +164,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:53.027742Z",
-     "start_time": "2023-11-02T13:18:50.377837Z"
+     "end_time": "2023-11-03T10:57:25.286236Z",
+     "start_time": "2023-11-03T10:57:22.636687Z"
     }
    },
    "outputs": [
@@ -188,8 +188,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:56.912628Z",
-     "start_time": "2023-11-02T13:18:53.073218Z"
+     "end_time": "2023-11-03T10:57:29.164367Z",
+     "start_time": "2023-11-03T10:57:25.303309Z"
     }
    },
    "outputs": [
@@ -212,8 +212,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-02T13:18:56.912922Z",
-     "start_time": "2023-11-02T13:18:56.910438Z"
+     "end_time": "2023-11-03T10:57:29.164949Z",
+     "start_time": "2023-11-03T10:57:29.162714Z"
     }
    },
    "outputs": [],
@@ -226,6 +226,100 @@
     "# print(original_size_in_bytes)\n",
     "# print(bitpacking_coding.size_of_coded_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array modificado: [ 2  4  7  9 -1 -1  2  2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### S-transform forward ###\n",
+    "array = [1,2,3,4,8,6,10,8]\n",
+    "transform = Wavelet(array, 1)\n",
+    "array_transform = transform.s_tranform_forward(array)\n",
+    "print(f\"Array modificado: {array_transform}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-03T10:57:29.167673Z",
+     "start_time": "2023-11-03T10:57:29.165653Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array invertido: [ 1  2  3  4  8  6 10  8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### S-transform Inverse ###\n",
+    "array_inv = transform.s_transform_inverse(array_transform)\n",
+    "print(f\"Array invertido: {array_inv}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-03T10:57:29.170576Z",
+     "start_time": "2023-11-03T10:57:29.168210Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[13], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m### S-transform Forward image ###\u001B[39;00m\n\u001B[1;32m      2\u001B[0m transform_image \u001B[38;5;241m=\u001B[39m Wavelet(original_image, \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtransform_image\u001B[38;5;241m.\u001B[39mhandle_transform_forward()\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "File \u001B[0;32m~/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/Wavelet.py:80\u001B[0m, in \u001B[0;36mWavelet.handle_transform_forward\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     79\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mhandle_transform_forward\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[0;32m---> 80\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m z \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimage\u001B[38;5;241m.\u001B[39mshape(\u001B[38;5;241m0\u001B[39m)):\n\u001B[1;32m     81\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m y \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimage\u001B[38;5;241m.\u001B[39mshape(\u001B[38;5;241m1\u001B[39m)):\n\u001B[1;32m     82\u001B[0m             \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFila 1: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimage[z][y]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[0;31mTypeError\u001B[0m: 'tuple' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "### S-transform Forward image ###\n",
+    "transform_image = Wavelet(original_image, 1)\n",
+    "print(f\"{transform_image.handle_transform_forward()}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-03T10:57:29.358327Z",
+     "start_time": "2023-11-03T10:57:29.171233Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-11-03T10:57:29.357341Z"
+    }
+   }
   }
  ],
  "metadata": {
