Forward to check, need to do reverse

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:02.583638Z",
-     "start_time": "2023-11-03T10:57:02.511554Z"
+     "end_time": "2023-11-10T11:13:12.370102Z",
+     "start_time": "2023-11-10T11:13:12.295234Z"
     }
    },
    "outputs": [],
@@ -23,18 +23,18 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:02.590963Z",
-     "start_time": "2023-11-03T10:57:02.587053Z"
+     "end_time": "2023-11-10T11:13:12.394845Z",
+     "start_time": "2023-11-10T11:13:12.383318Z"
     }
    },
    "outputs": [],
    "source": [
     "######LOAD RAW IMAGE######\n",
     "#dtype --> > stands for big endian, i stands for integer, 2 stands for 2 bytes\n",
-    "#originalFile=\"../images/03508649.1_512_512_2_0_12_0_0_0d.raw\" #int16\n",
-    "originalFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0.raw\" #uint8\n",
-    "#ImageRaw = load_image_raw(originalFile, 1, 512, 512, \"int16\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
-    "ImageRaw = load_image_raw(originalFile, 1, 2560, 2048, \"uint8\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
+    "originalFile=\"../images/03508649.1_512_512_2_0_12_0_0_0d.raw\" #int16\n",
+    "#originalFile=\"../images/n1_GRAY.1_2560_2048_1_0_8_0_0_0.raw\" #uint8\n",
+    "ImageRaw = load_image_raw(originalFile, 1, 512, 512, \"int16\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
+    "#ImageRaw = load_image_raw(originalFile, 1, 2560, 2048, \"uint8\") #https://numpy.org/doc/stable/reference/arrays.dtypes.html\n",
     "original_image = ImageRaw.load_image_raw()\n",
     "##############################"
    ]
@@ -44,8 +44,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:04.879487Z",
-     "start_time": "2023-11-03T10:57:02.632728Z"
+     "end_time": "2023-11-10T11:13:12.633687Z",
+     "start_time": "2023-11-10T11:13:12.501837Z"
     }
    },
    "outputs": [
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "order zero entropy of the image:  7.426142695578908\n"
+      "order zero entropy of the image:  10.431490855522489\n"
      ]
     }
    ],
@@ -69,8 +69,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:04.881939Z",
-     "start_time": "2023-11-03T10:57:04.878840Z"
+     "end_time": "2023-11-10T11:13:12.636191Z",
+     "start_time": "2023-11-10T11:13:12.633144Z"
     }
    },
    "outputs": [],
@@ -87,8 +87,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:18.315562Z",
-     "start_time": "2023-11-03T10:57:04.894933Z"
+     "end_time": "2023-11-10T11:13:13.332233Z",
+     "start_time": "2023-11-10T11:13:12.636945Z"
     }
    },
    "outputs": [
@@ -96,14 +96,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Check Quantize: [[[12. 12. 11. ... 11. 10. 10.]\n",
-      "  [12. 12. 12. ... 11. 11. 10.]\n",
-      "  [12. 12. 12. ... 10. 10. 10.]\n",
+      "Check Quantize: [[[ 2560.  2636. -3225. ... -2483. -2918. -3148.]\n",
+      "  [ 2432.  2713.  2739. ... -2431. -2739. -2918.]\n",
+      "  [ 2534.  2739. -3020. ... -2380. -2918. -2508.]\n",
       "  ...\n",
-      "  [13. 13. 13. ... 13. 13. 12.]\n",
-      "  [12. 12. 12. ... 12. 12. 13.]\n",
-      "  [12. 12. 12. ... 12. 12. 13.]]]\n",
-      "Entropia: 4.126742623824754\n"
+      "  [ 2688.  3046. -2508. ... -1945. -2431. -2508.]\n",
+      "  [ 1920.  2176.  3020. ... -1791.  3174. -2713.]\n",
+      "  [ 1945.  2252.  2508. ... -2713. -2918.  2867.]]]\n",
+      "Entropia: 8.427372356811585\n"
      ]
     }
    ],
@@ -121,8 +121,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:20.275295Z",
-     "start_time": "2023-11-03T10:57:18.332800Z"
+     "end_time": "2023-11-10T11:13:13.422657Z",
+     "start_time": "2023-11-10T11:13:13.374698Z"
     }
    },
    "outputs": [],
@@ -138,8 +138,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:22.632729Z",
-     "start_time": "2023-11-03T10:57:20.281369Z"
+     "end_time": "2023-11-10T11:13:13.549761Z",
+     "start_time": "2023-11-10T11:13:13.441853Z"
     }
    },
    "outputs": [
@@ -164,8 +164,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:25.286236Z",
-     "start_time": "2023-11-03T10:57:22.636687Z"
+     "end_time": "2023-11-10T11:13:13.684191Z",
+     "start_time": "2023-11-10T11:13:13.598211Z"
     }
    },
    "outputs": [
@@ -173,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mse: 27.425078010559083\n"
+      "Mse: 28.720321655273438\n"
      ]
     }
    ],
@@ -188,8 +188,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:29.164367Z",
-     "start_time": "2023-11-03T10:57:25.303309Z"
+     "end_time": "2023-11-10T11:13:13.878077Z",
+     "start_time": "2023-11-10T11:13:13.751016Z"
     }
    },
    "outputs": [
@@ -197,7 +197,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Psnr: 33.78332059025732 dB\n"
+      "Psnr: 75.72710570410173 dB\n"
      ]
     }
    ],
@@ -212,8 +212,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:29.164949Z",
-     "start_time": "2023-11-03T10:57:29.162714Z"
+     "end_time": "2023-11-10T11:13:13.880208Z",
+     "start_time": "2023-11-10T11:13:13.877927Z"
     }
    },
    "outputs": [],
@@ -249,8 +249,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:29.167673Z",
-     "start_time": "2023-11-03T10:57:29.165653Z"
+     "end_time": "2023-11-10T11:13:13.882795Z",
+     "start_time": "2023-11-10T11:13:13.880953Z"
     }
    }
   },
@@ -274,8 +274,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:29.170576Z",
-     "start_time": "2023-11-03T10:57:29.168210Z"
+     "end_time": "2023-11-10T11:13:13.885515Z",
+     "start_time": "2023-11-10T11:13:13.883736Z"
     }
    }
   },
@@ -284,40 +284,75 @@
    "execution_count": 13,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tuple' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[13], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m### S-transform Forward image ###\u001B[39;00m\n\u001B[1;32m      2\u001B[0m transform_image \u001B[38;5;241m=\u001B[39m Wavelet(original_image, \u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m----> 3\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mtransform_image\u001B[38;5;241m.\u001B[39mhandle_transform_forward()\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
-      "File \u001B[0;32m~/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/Wavelet.py:80\u001B[0m, in \u001B[0;36mWavelet.handle_transform_forward\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     79\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mhandle_transform_forward\u001B[39m(\u001B[38;5;28mself\u001B[39m):\n\u001B[0;32m---> 80\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m z \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimage\u001B[38;5;241m.\u001B[39mshape(\u001B[38;5;241m0\u001B[39m)):\n\u001B[1;32m     81\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m y \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimage\u001B[38;5;241m.\u001B[39mshape(\u001B[38;5;241m1\u001B[39m)):\n\u001B[1;32m     82\u001B[0m             \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFila 1: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mimage[z][y]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[0;31mTypeError\u001B[0m: 'tuple' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
+      "  [ 24321  27137  27393 ... -24319 -27391 -29183]\n",
+      "  [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
+      "  ...\n",
+      "  [ 26881  30465 -25087 ... -19455 -24319 -25087]\n",
+      "  [ 19201  21761  30209 ... -17919  31745 -27135]\n",
+      "  [ 19457  22529  25089 ... -27135 -29183  28673]]]\n"
      ]
     }
    ],
    "source": [
-    "### S-transform Forward image ###\n",
-    "transform_image = Wavelet(original_image, 1)\n",
-    "print(f\"{transform_image.handle_transform_forward()}\")\n"
+    "print(original_image)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-03T10:57:29.358327Z",
-     "start_time": "2023-11-03T10:57:29.171233Z"
+     "end_time": "2023-11-10T11:13:13.889495Z",
+     "start_time": "2023-11-10T11:13:13.886369Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "512\n",
+      "[[ 31489 -16399  -2830 ...   2944   4608   2048]\n",
+      " [-22319  -3358   9954 ...   6400   3840    512]\n",
+      " [-12670   7826  24530 ...   -256   2816  -3072]\n",
+      " ...\n",
+      " [ 13056  -1536   5632 ...   -256  17664   3584]\n",
+      " [  2432   1280  -2048 ... -13568  -4352   6400]\n",
+      " [  -512   2816  -3584 ...   7936  -2048 -14336]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### S-transform Forward image ###\n",
+    "transform_image = Wavelet(original_image, 2)\n",
+    "#print(len(original_image[0][0]))\n",
+    "transform = transform_image.handle_transform_forward()\n",
+    "print(len(transform[0]))\n",
+    "print(transform)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-10T11:13:49.572399Z",
+     "start_time": "2023-11-10T11:13:48.921619Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-11-03T10:57:29.357341Z"
+     "end_time": "2023-11-10T11:13:14.431369Z",
+     "start_time": "2023-11-10T11:13:14.427765Z"
     }
    }
   }
