Lo hace bien hasta el 4

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:12.370102Z",
-     "start_time": "2023-11-10T11:13:12.295234Z"
+     "end_time": "2023-11-16T19:12:28.673032Z",
+     "start_time": "2023-11-16T19:12:28.576216Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:12.394845Z",
-     "start_time": "2023-11-10T11:13:12.383318Z"
+     "end_time": "2023-11-16T19:12:28.717514Z",
+     "start_time": "2023-11-16T19:12:28.708765Z"
     }
    },
    "outputs": [],
@@ -44,8 +44,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:12.633687Z",
-     "start_time": "2023-11-10T11:13:12.501837Z"
+     "end_time": "2023-11-16T19:12:28.939148Z",
+     "start_time": "2023-11-16T19:12:28.790251Z"
     }
    },
    "outputs": [
@@ -69,8 +69,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:12.636191Z",
-     "start_time": "2023-11-10T11:13:12.633144Z"
+     "end_time": "2023-11-16T19:12:28.942209Z",
+     "start_time": "2023-11-16T19:12:28.938393Z"
     }
    },
    "outputs": [],
@@ -87,8 +87,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.332233Z",
-     "start_time": "2023-11-10T11:13:12.636945Z"
+     "end_time": "2023-11-16T19:12:29.650074Z",
+     "start_time": "2023-11-16T19:12:28.941670Z"
     }
    },
    "outputs": [
@@ -121,8 +121,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.422657Z",
-     "start_time": "2023-11-10T11:13:13.374698Z"
+     "end_time": "2023-11-16T19:12:29.743002Z",
+     "start_time": "2023-11-16T19:12:29.649048Z"
     }
    },
    "outputs": [],
@@ -138,8 +138,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.549761Z",
-     "start_time": "2023-11-10T11:13:13.441853Z"
+     "end_time": "2023-11-16T19:12:29.870055Z",
+     "start_time": "2023-11-16T19:12:29.809450Z"
     }
    },
    "outputs": [
@@ -164,8 +164,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.684191Z",
-     "start_time": "2023-11-10T11:13:13.598211Z"
+     "end_time": "2023-11-16T19:12:30.004369Z",
+     "start_time": "2023-11-16T19:12:29.918378Z"
     }
    },
    "outputs": [
@@ -188,8 +188,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.878077Z",
-     "start_time": "2023-11-10T11:13:13.751016Z"
+     "end_time": "2023-11-16T19:12:30.198812Z",
+     "start_time": "2023-11-16T19:12:30.034909Z"
     }
    },
    "outputs": [
@@ -212,8 +212,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.880208Z",
-     "start_time": "2023-11-10T11:13:13.877927Z"
+     "end_time": "2023-11-16T19:12:30.201968Z",
+     "start_time": "2023-11-16T19:12:30.197576Z"
     }
    },
    "outputs": [],
@@ -249,8 +249,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.882795Z",
-     "start_time": "2023-11-10T11:13:13.880953Z"
+     "end_time": "2023-11-16T19:12:30.202909Z",
+     "start_time": "2023-11-16T19:12:30.200798Z"
     }
    }
   },
@@ -274,8 +274,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.885515Z",
-     "start_time": "2023-11-10T11:13:13.883736Z"
+     "end_time": "2023-11-16T19:12:30.206365Z",
+     "start_time": "2023-11-16T19:12:30.203074Z"
     }
    }
   },
@@ -303,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:13.889495Z",
-     "start_time": "2023-11-10T11:13:13.886369Z"
+     "end_time": "2023-11-16T19:12:30.209817Z",
+     "start_time": "2023-11-16T19:12:30.206863Z"
     }
    }
   },
@@ -316,10 +316,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "512\n",
-      "[[ 31489 -16399  -2830 ...   2944   4608   2048]\n",
-      " [-22319  -3358   9954 ...   6400   3840    512]\n",
-      " [-12670   7826  24530 ...   -256   2816  -3072]\n",
+      "[[ -7589  25434  32185 ...   2944   4608   2048]\n",
+      " [ 22724  -5575   3252 ...   6400   3840    512]\n",
+      " [ 28291   2454 -15519 ...   -256   2816  -3072]\n",
       " ...\n",
       " [ 13056  -1536   5632 ...   -256  17664   3584]\n",
       " [  2432   1280  -2048 ... -13568  -4352   6400]\n",
@@ -329,30 +328,90 @@
    ],
    "source": [
     "### S-transform Forward image ###\n",
-    "transform_image = Wavelet(original_image, 2)\n",
+    "transform_image = Wavelet(original_image, 4)\n",
     "#print(len(original_image[0][0]))\n",
-    "transform = transform_image.handle_transform_forward()\n",
-    "print(len(transform[0]))\n",
-    "print(transform)\n"
+    "transform_forward = transform_image.handle_transform_forward()\n",
+    "print(transform_forward)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:49.572399Z",
-     "start_time": "2023-11-10T11:13:48.921619Z"
+     "end_time": "2023-11-16T19:12:36.479702Z",
+     "start_time": "2023-11-16T19:12:35.816Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -7166  -6398    514 ... -24831 -29183 -31487]\n",
+      " [ -8446  -5630  -5374 ... -24319 -27391 -29183]\n",
+      " [ -7422  -5374   2562 ... -23807 -29183 -25087]\n",
+      " ...\n",
+      " [ -5886  -2302   7682 ... -19455 -24319 -25087]\n",
+      " [-13566 -11006  -2558 ... -17919  31745 -27135]\n",
+      " [-13310 -10238  -7678 ... -27135 -29183  28673]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### S-transform Reverse image ###\n",
+    "transform_image_reverse = Wavelet(transform_forward, 4)\n",
+    "transform_reverse = transform_image_reverse.handle_transform_inverse()\n",
+    "print(transform_reverse)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-16T19:12:37.701513Z",
+     "start_time": "2023-11-16T19:12:36.506584Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 25601  26369 -32255 ... -24831 -29183 -31487]\n",
+      " [ 24321  27137  27393 ... -24319 -27391 -29183]\n",
+      " [ 25345  27393 -30207 ... -23807 -29183 -25087]\n",
+      " ...\n",
+      " [ 26881  30465 -25087 ... -19455 -24319 -25087]\n",
+      " [ 19201  21761  30209 ... -17919  31745 -27135]\n",
+      " [ 19457  22529  25089 ... -27135 -29183  28673]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(original_image[0])\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-16T19:12:37.704649Z",
+     "start_time": "2023-11-16T19:12:37.701236Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-10T11:13:14.431369Z",
-     "start_time": "2023-11-10T11:13:14.427765Z"
+     "end_time": "2023-11-16T19:12:32.131886Z",
+     "start_time": "2023-11-16T19:12:32.127999Z"
     }
    }
   }
