Need to check forward array and reverse array

--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.174255Z",
-     "start_time": "2023-11-17T11:44:17.067109Z"
+     "end_time": "2023-11-22T10:35:19.867214Z",
+     "start_time": "2023-11-22T10:35:19.662749Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.180751Z",
-     "start_time": "2023-11-17T11:44:17.159896Z"
+     "end_time": "2023-11-22T10:35:19.868892Z",
+     "start_time": "2023-11-22T10:35:19.800220Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.193746Z",
-     "start_time": "2023-11-17T11:44:17.173295Z"
+     "end_time": "2023-11-22T10:35:19.882857Z",
+     "start_time": "2023-11-22T10:35:19.822611Z"
     }
    },
    "outputs": [
@@ -71,8 +71,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.197329Z",
-     "start_time": "2023-11-17T11:44:17.189975Z"
+     "end_time": "2023-11-22T10:35:19.883894Z",
+     "start_time": "2023-11-22T10:35:19.831165Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.328551Z",
-     "start_time": "2023-11-17T11:44:17.211986Z"
+     "end_time": "2023-11-22T10:35:19.960055Z",
+     "start_time": "2023-11-22T10:35:19.857881Z"
     }
    },
    "outputs": [
@@ -123,8 +123,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.359008Z",
-     "start_time": "2023-11-17T11:44:17.319428Z"
+     "end_time": "2023-11-22T10:35:19.960978Z",
+     "start_time": "2023-11-22T10:35:19.945514Z"
     }
    },
    "outputs": [],
@@ -140,8 +140,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.363192Z",
-     "start_time": "2023-11-17T11:44:17.354609Z"
+     "end_time": "2023-11-22T10:35:19.968468Z",
+     "start_time": "2023-11-22T10:35:19.961868Z"
     }
    },
    "outputs": [
@@ -166,8 +166,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.374080Z",
-     "start_time": "2023-11-17T11:44:17.366675Z"
+     "end_time": "2023-11-22T10:35:20.026167Z",
+     "start_time": "2023-11-22T10:35:19.977908Z"
     }
    },
    "outputs": [
@@ -190,8 +190,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.408594Z",
-     "start_time": "2023-11-17T11:44:17.385516Z"
+     "end_time": "2023-11-22T10:35:20.027735Z",
+     "start_time": "2023-11-22T10:35:19.996680Z"
     }
    },
    "outputs": [
@@ -207,26 +207,6 @@
     "### PSNR ###\n",
     "psnr = Metrics(original_image, image_data_dequantized)\n",
     "print(f\"Psnr: {psnr.calculate_psnr()} dB\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.408757Z",
-     "start_time": "2023-11-17T11:44:17.389457Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "###BITPACKING CODING###\n",
-    "# bitpacking_coding = BitPacking(\"bitpacket.txt\" ,original_image)\n",
-    "# bitpacking_coding.coding()\n",
-    "# original_size_in_bytes = ImageRaw.get_original_size_in_bytes()\n",
-    "# CR = original_size_in_bytes / bitpacking_coding.size_of_coded_file\n",
-    "# print(original_size_in_bytes)\n",
-    "# print(bitpacking_coding.size_of_coded_file)"
    ]
   },
   {
@@ -251,8 +231,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.408955Z",
-     "start_time": "2023-11-17T11:44:17.392770Z"
+     "end_time": "2023-11-22T10:35:20.028221Z",
+     "start_time": "2023-11-22T10:35:20.006090Z"
     }
    }
   },
@@ -276,37 +256,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.409026Z",
-     "start_time": "2023-11-17T11:44:17.396352Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[16 21 25 ... 25 22 19]\n",
-      "  [19 25 29 ... 29 25 22]\n",
-      "  [22 28 34 ... 34 29 25]\n",
-      "  ...\n",
-      "  [22 28 33 ... 34 30 26]\n",
-      "  [19 24 29 ... 30 25 23]\n",
-      "  [16 21 25 ... 25 22 19]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(original_image)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.409084Z",
-     "start_time": "2023-11-17T11:44:17.398956Z"
+     "end_time": "2023-11-22T10:35:20.028386Z",
+     "start_time": "2023-11-22T10:35:20.010267Z"
     }
    }
   },
@@ -339,8 +290,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:20.252874Z",
-     "start_time": "2023-11-17T11:44:20.220820Z"
+     "end_time": "2023-11-22T10:35:25.081045Z",
+     "start_time": "2023-11-22T10:35:25.043789Z"
     }
    }
   },
@@ -371,8 +322,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:20.691452Z",
-     "start_time": "2023-11-17T11:44:20.687949Z"
+     "end_time": "2023-11-22T10:35:25.522380Z",
+     "start_time": "2023-11-22T10:35:25.520673Z"
     }
    }
   },
@@ -395,13 +346,110 @@
     }
    ],
    "source": [
-    "print(original_image)\n"
+    "print(original_image)\n",
+    " "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:21.507807Z",
-     "start_time": "2023-11-17T11:44:21.501039Z"
+     "end_time": "2023-11-22T10:35:25.971601Z",
+     "start_time": "2023-11-22T10:35:25.965592Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array modificado: [146 155 161  36  37  37  37 166  38  34  28  22  14 144 240 183 178 301\n",
+      " 172 170 165 163 163 158 282 286 154 150 148 276 148 140 265 137 135 133\n",
+      " 121 250 114 249 120 246 120 247 247 246 251 116  46 151 154 159 162 165\n",
+      " 167  39  36  36 165  37  37  33  26  20 251 252 253   1   0   0   1 254\n",
+      "   1   3   3   4   3 244 178   1   5 255   1   2   3   0   0   2 255 255\n",
+      "   2   1   4 255   2   6 252   1   3   3   4 253   3 254   0 255   1 255\n",
+      " 255 255 254  17  32 254 255 254 254 255 255   1   1   0 255   0   0   4\n",
+      "   3   3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### S-transform forward ###\n",
+    "array = original_image[0][0]\n",
+    "transform = Wavelet(array, 1)\n",
+    "array_transform = transform.s_tranform_forward(array)\n",
+    "print(f\"Array modificado: {array_transform}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T10:42:00.105734Z",
+     "start_time": "2023-11-22T10:42:00.096738Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array invertido: [272  21 281  29 288  35  37  36  37  37  37  37  38  37 293  39  39  38\n",
+      "  36  33  30  27  24  20  16  13 266  22 329 151 184 183 181 176 429 174\n",
+      " 173 172 171 169 167 164 163 163 163 163 159 157 410 155 414 159 155 153\n",
+      " 151 150 150 146 404 149 149 147 143 137 391 139 138 137 137 134 135 132\n",
+      " 123 119 377 124 116 113 376 122 120 120 374 119 121 120 375 120 375 120\n",
+      " 374 119 378 124 125 108  62  30 278  24 282  27 286  32 289  35 293  38\n",
+      " 295  40  40  39  37  36  36  36 293  38  37  37  37  37  35  31  28  25\n",
+      "  22  19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### S-transform Inverse ###\n",
+    "array_inv = transform.s_transform_inverse(array_transform)\n",
+    "print(f\"Array invertido: {array_inv}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T10:42:19.063676Z",
+     "start_time": "2023-11-22T10:42:19.050722Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: [ 16  21  25  29  32  35  37  36  37  37  37  37  38  37  37  39  39  38\n",
+      "  36  33  30  27  24  20  16  13  10  22  73 151 184 183 181 176 173 174\n",
+      " 173 172 171 169 167 164 163 163 163 163 159 157 154 155 158 159 155 153\n",
+      " 151 150 150 146 148 149 149 147 143 137 135 139 138 137 137 134 135 132\n",
+      " 123 119 121 124 116 113 120 122 120 120 118 119 121 120 119 120 119 120\n",
+      " 118 119 122 124 125 108  62  30  22  24  26  27  30  32  33  35  37  38\n",
+      "  39  40  40  39  37  36  36  36  37  38  37  37  37  37  35  31  28  25\n",
+      "  22  19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Array original: {original_image[0][0]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T10:42:50.401161Z",
+     "start_time": "2023-11-22T10:42:50.393673Z"
     }
    }
   },
@@ -444,8 +492,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.465869Z",
-     "start_time": "2023-11-17T11:44:17.461639Z"
+     "end_time": "2023-11-22T10:35:20.110548Z",
+     "start_time": "2023-11-22T10:35:20.092804Z"
     }
    }
   },
@@ -505,8 +553,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.470328Z",
-     "start_time": "2023-11-17T11:44:17.465041Z"
+     "end_time": "2023-11-22T10:35:20.111597Z",
+     "start_time": "2023-11-22T10:35:20.097649Z"
     }
    }
   },
@@ -550,8 +598,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.471253Z",
-     "start_time": "2023-11-17T11:44:17.468137Z"
+     "end_time": "2023-11-22T10:35:20.113510Z",
+     "start_time": "2023-11-22T10:35:20.101566Z"
     }
    }
   },
@@ -591,8 +639,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.504130Z",
-     "start_time": "2023-11-17T11:44:17.472774Z"
+     "end_time": "2023-11-22T10:35:20.122086Z",
+     "start_time": "2023-11-22T10:35:20.108101Z"
     }
    }
   },
@@ -629,8 +677,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.507954Z",
-     "start_time": "2023-11-17T11:44:17.475934Z"
+     "end_time": "2023-11-22T10:35:20.128068Z",
+     "start_time": "2023-11-22T10:35:20.111282Z"
     }
    }
   },
@@ -642,8 +690,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-17T11:44:17.508092Z",
-     "start_time": "2023-11-17T11:44:17.477984Z"
+     "end_time": "2023-11-22T10:35:20.128328Z",
+     "start_time": "2023-11-22T10:35:20.114677Z"
     }
    }
   }
