--- a/TCIProject/InteractiveCodingImageTool.ipynb
+++ b/TCIProject/InteractiveCodingImageTool.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:19.867214Z",
-     "start_time": "2023-11-22T10:35:19.662749Z"
+     "end_time": "2023-11-23T09:10:47.173354Z",
+     "start_time": "2023-11-23T09:10:47.091751Z"
     }
    },
    "outputs": [],
@@ -23,8 +23,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:19.868892Z",
-     "start_time": "2023-11-22T10:35:19.800220Z"
+     "end_time": "2023-11-23T09:10:47.173630Z",
+     "start_time": "2023-11-23T09:10:47.167949Z"
     }
    },
    "outputs": [],
@@ -46,8 +46,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:19.882857Z",
-     "start_time": "2023-11-22T10:35:19.822611Z"
+     "end_time": "2023-11-23T09:10:47.195732Z",
+     "start_time": "2023-11-23T09:10:47.179419Z"
     }
    },
    "outputs": [
@@ -71,8 +71,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:19.883894Z",
-     "start_time": "2023-11-22T10:35:19.831165Z"
+     "end_time": "2023-11-23T09:10:47.195817Z",
+     "start_time": "2023-11-23T09:10:47.181545Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:19.960055Z",
-     "start_time": "2023-11-22T10:35:19.857881Z"
+     "end_time": "2023-11-23T09:10:47.316584Z",
+     "start_time": "2023-11-23T09:10:47.291061Z"
     }
    },
    "outputs": [
@@ -123,8 +123,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:19.960978Z",
-     "start_time": "2023-11-22T10:35:19.945514Z"
+     "end_time": "2023-11-23T09:10:47.371269Z",
+     "start_time": "2023-11-23T09:10:47.334158Z"
     }
    },
    "outputs": [],
@@ -140,8 +140,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:19.968468Z",
-     "start_time": "2023-11-22T10:35:19.961868Z"
+     "end_time": "2023-11-23T09:10:47.389254Z",
+     "start_time": "2023-11-23T09:10:47.359869Z"
     }
    },
    "outputs": [
@@ -166,8 +166,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.026167Z",
-     "start_time": "2023-11-22T10:35:19.977908Z"
+     "end_time": "2023-11-23T09:10:47.389465Z",
+     "start_time": "2023-11-23T09:10:47.381584Z"
     }
    },
    "outputs": [
@@ -190,8 +190,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.027735Z",
-     "start_time": "2023-11-22T10:35:19.996680Z"
+     "end_time": "2023-11-23T09:10:47.407219Z",
+     "start_time": "2023-11-23T09:10:47.400076Z"
     }
    },
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -226,19 +226,20 @@
     "array = [1,2,3,4,8,6,10,8]\n",
     "transform = Wavelet(array, 1)\n",
     "array_transform = transform.s_tranform_forward(array)\n",
-    "print(f\"Array modificado: {array_transform}\")\n"
+    "print(f\"Array modificado: {array_transform}\")\n",
+    "    "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.028221Z",
-     "start_time": "2023-11-22T10:35:20.006090Z"
+     "end_time": "2023-11-23T09:10:47.415719Z",
+     "start_time": "2023-11-23T09:10:47.404819Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -256,14 +257,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.028386Z",
-     "start_time": "2023-11-22T10:35:20.010267Z"
+     "end_time": "2023-11-23T09:10:47.416700Z",
+     "start_time": "2023-11-23T09:10:47.413358Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -278,6 +279,16 @@
       " [149 159 167 ...   3   3   2]\n",
       " [146 155 161 ...   3   3   3]]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/Wavelet.py:27: RuntimeWarning: overflow encountered in scalar subtract\n",
+      "  L = [X[2*i+1] + int(int(X[2*i] - X[2*i+1])/2) for i in range(n)]\n",
+      "/Users/lucasjimeneznunez/Desktop/UAB/4t/TCI/Projecte/TCIProject/TCIProject/codingTools/Wavelet.py:28: RuntimeWarning: overflow encountered in scalar subtract\n",
+      "  H = [X[2*i] - X[2*i+1] for i in range(n)]\n"
+     ]
     }
    ],
    "source": [
@@ -290,26 +301,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:25.081045Z",
-     "start_time": "2023-11-22T10:35:25.043789Z"
+     "end_time": "2023-11-23T09:10:47.464577Z",
+     "start_time": "2023-11-23T09:10:47.419031Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[272  21 281 ...  25  22  19]\n",
-      "  [275  25 285 ...  29  25  22]\n",
-      "  [278  28 290 ...  34  29  25]\n",
+      "[[[16 21 25 ... 25 22 19]\n",
+      "  [19 25 29 ... 29 25 22]\n",
+      "  [22 28 34 ... 34 29 25]\n",
       "  ...\n",
-      "  [278  28 289 ...  34  30  26]\n",
-      "  [275  24 285 ...  30  25  23]\n",
-      "  [272  21 281 ...  25  22  19]]]\n"
+      "  [22 28 33 ... 34 30 26]\n",
+      "  [19 24 29 ... 30 25 23]\n",
+      "  [16 21 25 ... 25 22 19]]]\n"
      ]
     }
    ],
@@ -322,14 +333,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:25.522380Z",
-     "start_time": "2023-11-22T10:35:25.520673Z"
+     "end_time": "2023-11-23T09:10:47.495716Z",
+     "start_time": "2023-11-23T09:10:47.481435Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -352,14 +363,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:25.971601Z",
-     "start_time": "2023-11-22T10:35:25.965592Z"
+     "end_time": "2023-11-23T09:10:47.496197Z",
+     "start_time": "2023-11-23T09:10:47.485699Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -386,26 +397,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:42:00.105734Z",
-     "start_time": "2023-11-22T10:42:00.096738Z"
+     "end_time": "2023-11-23T09:10:47.496422Z",
+     "start_time": "2023-11-23T09:10:47.488087Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array invertido: [272  21 281  29 288  35  37  36  37  37  37  37  38  37 293  39  39  38\n",
-      "  36  33  30  27  24  20  16  13 266  22 329 151 184 183 181 176 429 174\n",
-      " 173 172 171 169 167 164 163 163 163 163 159 157 410 155 414 159 155 153\n",
-      " 151 150 150 146 404 149 149 147 143 137 391 139 138 137 137 134 135 132\n",
-      " 123 119 377 124 116 113 376 122 120 120 374 119 121 120 375 120 375 120\n",
-      " 374 119 378 124 125 108  62  30 278  24 282  27 286  32 289  35 293  38\n",
-      " 295  40  40  39  37  36  36  36 293  38  37  37  37  37  35  31  28  25\n",
+      "Array invertido: [ 16  21  25  29  32  35  37  36  37  37  37  37  38  37  37  39  39  38\n",
+      "  36  33  30  27  24  20  16  13  10  22  73 151 184 183 181 176 173 174\n",
+      " 173 172 171 169 167 164 163 163 163 163 159 157 154 155 158 159 155 153\n",
+      " 151 150 150 146 148 149 149 147 143 137 135 139 138 137 137 134 135 132\n",
+      " 123 119 121 124 116 113 120 122 120 120 118 119 121 120 119 120 119 120\n",
+      " 118 119 122 124 125 108  62  30  22  24  26  27  30  32  33  35  37  38\n",
+      "  39  40  40  39  37  36  36  36  37  38  37  37  37  37  35  31  28  25\n",
       "  22  19]\n"
      ]
     }
@@ -418,14 +429,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:42:19.063676Z",
-     "start_time": "2023-11-22T10:42:19.050722Z"
+     "end_time": "2023-11-23T09:10:47.496608Z",
+     "start_time": "2023-11-23T09:10:47.491058Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -448,8 +459,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:42:50.401161Z",
-     "start_time": "2023-11-22T10:42:50.393673Z"
+     "end_time": "2023-11-23T09:10:47.496690Z",
+     "start_time": "2023-11-23T09:10:47.493820Z"
     }
    }
   },
@@ -475,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -492,14 +503,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.110548Z",
-     "start_time": "2023-11-22T10:35:20.092804Z"
+     "end_time": "2023-11-23T09:10:47.499739Z",
+     "start_time": "2023-11-23T09:10:47.496109Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -553,14 +564,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.111597Z",
-     "start_time": "2023-11-22T10:35:20.097649Z"
+     "end_time": "2023-11-23T09:10:47.505935Z",
+     "start_time": "2023-11-23T09:10:47.499264Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -598,14 +609,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.113510Z",
-     "start_time": "2023-11-22T10:35:20.101566Z"
+     "end_time": "2023-11-23T09:10:47.506042Z",
+     "start_time": "2023-11-23T09:10:47.502331Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -639,14 +650,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.122086Z",
-     "start_time": "2023-11-22T10:35:20.108101Z"
+     "end_time": "2023-11-23T09:10:47.512273Z",
+     "start_time": "2023-11-23T09:10:47.504257Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -677,21 +688,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.128068Z",
-     "start_time": "2023-11-22T10:35:20.111282Z"
+     "end_time": "2023-11-23T09:10:47.512490Z",
+     "start_time": "2023-11-23T09:10:47.509241Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T10:35:20.128328Z",
-     "start_time": "2023-11-22T10:35:20.114677Z"
+     "end_time": "2023-11-23T09:10:47.513684Z",
+     "start_time": "2023-11-23T09:10:47.511134Z"
     }
    }
   }
